fixed background color of metadata content on mobile

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -303,3 +303,7 @@ body:not(.is-ios):not(.is-android) input[type="datetime-local"]:not([disabled="t
 .markdown-rendered div:is(.el-div, .el-blockquote) + div > :is(h1,h2,h3,h4,h5,h6) {
   margin-top: var(--heading-spacing);
 }
+
+.is-mobile .metadata-content {
+  background-color: var(--background-primary);
+}
